=== ** v1.2.0.16 ===

* [MOD] Add dot to LDAP group name chack regex. Thanks to @davidpsc. Closes #280
* [FIX] Fixed user migration from 1.1
* [MOD] Update version

=== ** v1.2.0.15 ===

* [FIX] Fixed LDAP mail retrieving when multiple mail addresses are set. Thanks to @ArminXG. Closes #278
* [MOD] Add LDAP mail mapping. Related #278
* [FIX] Fixed user migration process.
* [FIX] Fixed resetting search filters.
* [FIX] Fixed basic auth check. Thanks to @davidpsc . Closes #275
* [FIX] Fixed LDAP user search filter when ADS is not set. Solves #277

=== ** v1.2.0.14 ===

* [FIX] Fixed issue when installing sysPass. Solves #272
* [FIX] Fixed issue when retrieving HTTP headers on non-Apache environments.

=== ** v1.2.0.13 ===

* [FIX] Fixed issue when pressing copy-to-clipboard icon.
* [FIX] Fixes #215. Password is not shown when it contains special chars. Thanks @goatmaster for the feedback.
* [FIX] Fixes user-in-group checking for accounts ACL. Related #263
* [FIX] Fixes retrieving username from LDAP.
* [FIX] Fixes LDAP group name lookup. Related #257, #258, #264,
* [FIX] Closes #237. Fixed missing field for main group change in account view. Thanks to @Sintbert for the feedback.
* [FIX] Closes #221. Fixed missing apache_request_headers function. Thanks to @alexanderbuhler for the feedback.
* [FIX] Closes #243. Fixed LDAP URL issue when using ADS auth. Thanks to @guannais for the feedback.
* [FIX] Closes #222. Fixed default DB column values when mysql is set in strict mode. Thanks to @tdk1069 for the feedback.
* [FIX] Related #245. MySQL sysPass user account creation  error.
* [FIX] Fixed issue when caching objects in session cache.
* [FIX] Fixed LDAP check when ADS is set. Thanks to @eth0h4ckr for the feedback.
* [FIX] Closes #264. Fixed LDAP group listing issue when there are more than one group with the same name. The first one is picked. Thanks to @eth0h4ckr for the feedback.